added deletion of bookmarks with confirm. FIXING NEEDED

--- a/popup.html
+++ b/popup.html
@@ -45,5 +45,11 @@
         <ul id="tags">
         </ul>
     </div>
+    <div class="confbox" id="confbox">
+        <h3>Are you sure you want to delete:</h3>
+        <p></p>
+        <button class="button" id="confirm-delete">Yes</button>
+        <button class="button" id="cancel-delete">No</button>
+    </div>
 </body>
 </html>
