--- a/popup.html
+++ b/popup.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <title></title>
     <link rel="stylesheet" href="style.css"/>
+    <style id="custom-style">
+
+    </style>
 </head>
 <body>
     <script src="lib/jquery-2.1.4.min.js"></script>
