Refactoring for release

--- a/settings_main.html
+++ b/settings_main.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>Ownclod 8 bookmarks</title>
+    <title>OwnCloud 8 bookmarks</title>
     <link rel="stylesheet" href="style.css"/>
     <link rel="stylesheet" href="settings.css"/>
     <style id="custom-style-preview">
@@ -14,8 +14,7 @@
     <div class="settings-wrapper">
         <div class="logo">
             <img src="big_icon.png" alt="logo"/>
-
-            <h3>Owncloud 8 bookmarks</h3>
+            <h3>OwnCloud 8 bookmarks</h3>
         </div>
         <div class="controls">
             <div>
@@ -86,8 +85,8 @@
                     </div>
                 </form>
             </div>
-
         </div>
-        <script src="settings.js"></script>
+    </div>
+    <script src="settings.js"></script>
 </body>
 </html>
