--- a/popup.html
+++ b/popup.html
@@ -39,8 +39,8 @@
                 <textarea name="tags" id="addBookmarkTags" cols="30" rows="5"></textarea>
             </div>
             <div class="form-actions">
-                <input class="button" type="submit" value="Save"/>
-                <input class="button" type="reset" value="Cancel"/>
+                <input class="button save" type="submit" value="Save"/>
+                <input class="button reset" type="reset" value="Cancel"/>
             </div>
         </form>
     </div>
